public/main.css
/* ... */
.ec-breakdown-row:not(.ec-breakdown-header):hover {
  background-color: #e9decf;
}

.ec-breakdown-footnote {
  font-size: 14px;
  color: #555555;
  padding-top: 3px;
}

@media (max-width: 490px) {

  .ec-breakdown-container {
    margin-top: 0.5em;
  }

  .Toss-up {
    margin: 0;
  }
  .ec-breakdown-column:first-child .ec-breakdown-header,
  .ec-breakdown-column:nth-child(4) .ec-breakdown-header {
    border-right: 0;

  }
  .ec-breakdown-column {
    margin-bottom: 20px;
  }

  .ec-breakdown-column.Solid,
  .ec-breakdown-column.Leaning {
    display: none;
  }
}
/** Mobile nav **/

.nav___mobile-nav,
.rail__mobile-overlay,
.rail__close-button--container {
  display: none;
}

.rail__state-list__nationalItems {
  display: flex;
  height: 232px;
  align-items: center;
  flex-wrap: wrap;
  width: 100%;
}

.rail__state-list__logo {
  padding: 0 1em;
  border-bottom: none !important;
}

@media (max-width: 979px) {
  .nav___mobile-nav {
    display: flex;
    margin-top: 1em;
    padding: 1em 0;
    justify-content: space-around;
    border-top: 2px solid #E4DFCB;
  }

  .nav___mobile-nav--back-to-overview,
  .nav___mobile-nav--choose-state {
    color: #27757B;
    height: 2em;
  }

  .nav___mobile-nav--back-to-overview {
    background: transparent;
    border: 0 !important;
    display: flex !important;
    padding: 0 !important;
    align-items: flex-start;
    text-align: left;
  }

  .nav___mobile-nav:not(.page__national) .nav___mobile-nav--back-to-overview .dotted-underline {
    color: #27757B;
    border-bottom: 1px dotted #27757B;
  }

  .nav___mobile-nav--back-to-overview:focus,
  .nav___mobile-nav--back-to-overview:active {
    border: none !important;
    box-shadow: none !important;
    background: none !important;
  }

  .page__national .nav___mobile-nav--back-to-overview {
    color: #333;
    cursor: default;
  }

  .page__national .nav___mobile-nav--back-to-overview:focus {
    outline: none !important;
  }

  .page__national .nav___mobile-nav--back-to-overview i.o-icons-icon {
    display: none;
  }

  .nav___mobile-nav--choose-state {
    background: transparent;
    border: 0;
    border-left: 2px solid #E4DFCB;
    display: block;
    text-align: center;
    text-transform: none !important;
  }

  .nav___mobile-nav--back-to-overview {
    align-items: center;
  }

  .nav___mobile-nav--back-to-overview > img {
    padding: 0 0.5em;
  }

  .article__aside {
    display: block;
    position: fixed;
    padding-left: 0;
    width: 90%;
    height: 100%;
    left: 105%; /* start off screen */
    top: 0;
    transition: left 195ms cubic-bezier(0.645, 0.045, 0.355, 1); /* exiting: easeInOutCubic */
    background: #FFF3E5;
    overflow: hidden;
    -webkit-overflow-scrolling: touch;
    z-index: 98;
  }

  .article__aside.opened {
    left: 10%;
    transition: left 225ms cubic-bezier(0.23, 1, 0.32, 1); /* entering: easeOutQuint */
    box-shadow: -4px 6px 60px -4px rgba(0,0,0,0.5);
  }

  .rail {
    height: 100%;
  }

  .rail__mobile-overlay {
    display: block;
    position: fixed;
    left: 105%;
    top: 0;
    background-color: rgba(0, 0, 0, 0);
    transition: background-color 195ms linear;
    width: 100%;
    height: 100%;
    z-index: 97;
  }

  .rail__mobile-overlay.opened {
    left: 0%;
    background-color: rgba(0, 0, 0, 0.25);
  }

  .rail__close-button--container {
    border-bottom: 2px solid #F6EEE4;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    height: 2.5em;
  }

  .rail__close-button--button {
    background-image: url("https://next-geebee.ft.com/image/v1/images/raw/fticon-v1:cross?source=o-icons&tint=%23505050,%23505050&format=svg");
    background-size: contain;
    display: block;
    height: 40px;
    width: 40px;
    margin-right: 1em;
    opacity: 0.75;
  }

  .rail__close-button--button:hover,
  .rail__close-button--button:focus {
    opacity: 1;
  }

  .rail__state-list__nationalItems {
    height: 75px;
  }

  .rail__content {
    border: 0;
    padding: 0 1.9em 1.9em 2em;
    overflow: auto;
    height: 95%;
  }

  .rail__content h3 {
    display: none;
  }

  .rail__state-list {
    padding: 0;
  }

  .rail__state-list h4 {
    margin-bottom: 10px;
    padding-top: 0;
    margin-top: 4px;
  }

  .rail__state-list ul {
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 20px;
  }

  .rail__state-list ul li {
    padding: 0.25em 0.5em;
    width: calc(50% - 2 * .5em);
    max-width: 200px;
    font-weight: normal;
    color: #545752;
  }

  .rail__state-list__nationalLink {
    padding: 0;
    /*background-image: url(https://image.webservices.ft.com/v1/images/raw/fticon:arrow-left?source=o-icons&tint=%2327757B,%2327757B&format=svg);
    background-image: url(https://image.webservices.ft.com/v1/images/raw/fticon:arrow-left?source=o-icons&tint=%2327757B,%2327757B&format=png&width=14)\9;
    background-repeat: no-repeat;
    background-position: -5px 50%;
    background-size: contain;*/
    width: 60%;
    max-width: 180px;
  }

  .rail__state-list__nationalMap {
    display: none;
  }

  .rail__state-list__items .o-expander__content {
    max-height: none;
    padding-bottom: 5vh;
  }

  .rail__ad {
    display: none;
  }

  /** hacky text overrides **/
  .nav__link--district-of-columbia:before {
    content: 'D.C.';
    font-size: 1.125rem;
  }
  .nav__link--district-of-columbia {
    font-size: 0;
  }

  @media (max-width: 320px) {
    .nav___mobile-nav--back-to-overview,
    .nav___mobile-nav--choose-state {
      font-size: 90% !important;
    }

    .rail__content {
      padding: 1em;
    }

    .rail__state-list ul li {
      font-size: 90% !important;
    }

    .nav__link--district-of-columbia:before {
      font-size: 1rem;
    }
  }
}

@media (min-width: 76.25em) {
    .article__aside{
      padding-left: 0;
    }
}

.suggested-reads {
    border: 1px solid #cec6b9;
    position: relative;
    margin: 30px 0 20px;
    padding: 20px 20px 0;
}
/* ... */

